// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTableRow should match the snapshot 1`] = `<styled.tr />`;

exports[`SimpleTableRow should match the snapshot when labeled 1`] = `
<styled.tr>
  <TableCell
    redirect={false}
  >
    mock
  </TableCell>
</styled.tr>
`;

exports[`SimpleTableRow should match the snapshot with mock data 1`] = `
<styled.tr>
  <TableCell
    key="0"
    redirect={false}
  >
    val1
  </TableCell>
  <TableCell
    key="1"
    redirect={false}
  >
    val2
  </TableCell>
</styled.tr>
`;
